--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
--e git+git@github.com:mmcloughlin/finsky.git@6c44ef45727438fd1b41193979a2281c7c6b09da#egg=finsky-master
+protobuf==3.0.0a3
 pydash==3.2.2
 requests==2.7.0
